Configurar Firebase real - ferreteriajym-gastos proyecto conectado

--- a/app/index-firebase.html
+++ b/app/index-firebase.html
@@ -198,15 +198,15 @@
 
     <!-- Firebase SDK -->
     <script type="module">
-        // Your web app's Firebase configuration (REEMPLAZAR CON TU CONFIGURACIÓN)
+        // Your web app's Firebase configuration - ferreteriajym-gastos
         const firebaseConfig = {
-            apiKey: "TEMP_API_KEY",
-            authDomain: "tu-proyecto.firebaseapp.com",
-            databaseURL: "https://tu-proyecto.firebasedatabase.app",
-            projectId: "tu-proyecto",
-            storageBucket: "tu-proyecto.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcd1234567890"
+            apiKey: "AIzaSyBLsMp8nAxD4drtgHR16mdL_LZ2L2OOVsE",
+            authDomain: "ferreteriajym-gastos.firebaseapp.com",
+            projectId: "ferreteriajym-gastos",
+            storageBucket: "ferreteriajym-gastos.firebasestorage.app",
+            messagingSenderId: "346093684971",
+            appId: "1:346093684971:web:a51f3a7a0b185c724516ae",
+            measurementId: "G-PBYPPL86MH"
         };
 
         // Inicializar Firebase
