Agregar timestamps con hora exacta a todos los registros - mostrar fecha y hora en tablas

--- a/app/index-firebase.html
+++ b/app/index-firebase.html
@@ -245,6 +245,7 @@
                     <thead>
                         <tr>
                             <th>Fecha</th>
+                            <th>Hora</th>
                             <th>Descripción</th>
                             <th>Categoría</th>
                             <th>Cliente</th>
@@ -268,6 +269,7 @@
                     <thead>
                         <tr>
                             <th>Fecha</th>
+                            <th>Hora</th>
                             <th>Descripción</th>
                             <th>Categoría</th>
                             <th>Cliente</th>
@@ -290,6 +292,7 @@
                     <thead>
                         <tr>
                             <th>Fecha</th>
+                            <th>Hora</th>
                             <th>Proveedor</th>
                             <th>Descripción</th>
                             <th>Factura</th>
@@ -312,6 +315,7 @@
                     <thead>
                         <tr>
                             <th>Fecha</th>
+                            <th>Hora</th>
                             <th>Proveedor</th>
                             <th>Descripción</th>
                             <th>Recibo</th>
