Actualizar configuración Firebase con credenciales reales ferreteriajym-gastos

--- a/app/index-firebase-reportes.html
+++ b/app/index-firebase-reportes.html
@@ -21,12 +21,12 @@
 
         // Your web app's Firebase configuration (TEMPORAL - necesitas reemplazar con la tuya)
         const firebaseConfig = {
-            apiKey: "TEMP_API_KEY",
-            authDomain: "ferreteria-control-demo.firebaseapp.com",
-            projectId: "ferreteria-control-demo",
-            storageBucket: "ferreteria-control-demo.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcd1234567890"
+            apiKey: "AIzaSyBLsMp8nAxD4drtgHR16mdL_LZ2L2OOVsE",
+            authDomain: "ferreteriajym-gastos.firebaseapp.com",
+            projectId: "ferreteriajym-gastos",
+            storageBucket: "ferreteriajym-gastos.appspot.com",
+            messagingSenderId: "346095133456",
+            appId: "1:346095133456:web:8b72b7e4c5f9d1a3e4b2c5"
         };
 
         // Initialize Firebase
