--- a/app/index-firebase-completo.html
+++ b/app/index-firebase-completo.html
@@ -19,14 +19,15 @@
         import { getFirestore, collection, addDoc, onSnapshot, deleteDoc, doc, updateDoc, query, orderBy, serverTimestamp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
         import { getAuth, signInAnonymously, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
-        // Your web app's Firebase configuration (TEMPORAL - necesitas reemplazar con la tuya)
+        // Your web app's Firebase configuration - ferreteriajym-gastos
         const firebaseConfig = {
-            apiKey: "TEMP_API_KEY",
-            authDomain: "ferreteria-control-demo.firebaseapp.com",
-            projectId: "ferreteria-control-demo",
-            storageBucket: "ferreteria-control-demo.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcd1234567890"
+            apiKey: "AIzaSyBLsMp8nAxD4drtgHR16mdL_LZ2L2OOVsE",
+            authDomain: "ferreteriajym-gastos.firebaseapp.com",
+            projectId: "ferreteriajym-gastos",
+            storageBucket: "ferreteriajym-gastos.firebasestorage.app",
+            messagingSenderId: "346093684971",
+            appId: "1:346093684971:web:a51f3a7a0b185c724516ae",
+            measurementId: "G-PBYPPL86MH"
         };
 
         // Initialize Firebase
