Fix: Cambiar scripts Firebase a type='module' para soporte de imports ES6

--- a/app/index-firebase-reportes.html
+++ b/app/index-firebase-reportes.html
@@ -441,7 +441,7 @@
         </footer>
     </div>
 
-    <script src="script-ferreteria-firebase.js"></script>
+    <script type="module" src="script-ferreteria-firebase.js"></script>
     
     <!-- Script para Reportes y Gráficos -->
     <script>
